基本コンソール内容確認用

--- a/documentation/html/v2.0/ja/it_automation_base/basic_console.html
+++ b/documentation/html/v2.0/ja/it_automation_base/basic_console.html
@@ -240,7 +240,7 @@
 </thead>
 <tbody>
 <tr class="row-even"><td><p>廃止</p></td>
-<td><p><strong>&lt;&lt;確認箇所 #1&gt;&gt;</strong></p></td>
+<td><p><strong>{{#1:「廃止」の説明内容の記入をお願い致します。}}</strong></p></td>
 <td><p>-</p></td>
 <td><p>自動入力</p></td>
 <td></td>
@@ -274,7 +274,7 @@ Symphony実行や各ドライバの作業実行で、このオペレーション
 <td><p>未実行のオペレーションの場合は空白が表示されます。</p></td>
 </tr>
 <tr class="row-odd"><td><p>環境</p></td>
-<td><p><strong>&lt;&lt;確認箇所 #2&gt;&gt;</strong></p></td>
+<td><p><strong>{{#2:「環境」の説明内容の記入をお願い致します。}}</strong></p></td>
 <td><p>-</p></td>
 <td><p>自動入力</p></td>
 <td></td>
@@ -286,13 +286,13 @@ Symphony実行や各ドライバの作業実行で、このオペレーション
 <td></td>
 </tr>
 <tr class="row-odd"><td><p>最終更新日時</p></td>
-<td><p><strong>&lt;&lt;確認箇所 #3&gt;&gt;</strong></p></td>
+<td><p><strong>{{#3:「最終更新日時」の説明内容の記入をお願い致します。}}</strong></p></td>
 <td><p>-</p></td>
 <td><p>自動入力</p></td>
 <td></td>
 </tr>
 <tr class="row-even"><td><p>最終更新者</p></td>
-<td><p><strong>&lt;&lt;確認箇所 #4&gt;&gt;</strong></p></td>
+<td><p><strong>{{#4:「最終更新者」の説明内容の記入をお願い致します。}}</strong></p></td>
 <td><p>-</p></td>
 <td><p>自動入力</p></td>
 <td></td>
